# GraphQL

./: README.md  main.py  pyproject.toml
app/: __init__.py  model.py  mutation.py  note_repository.py  query.py  service.py
configs/: config.py
